todo list working *chef kiss*

--- a/pages.html
+++ b/pages.html
@@ -24,8 +24,8 @@
         <!-- START NAVBAR -->
         <nav id="navbar" class="no-select no-hov">
             <!-- <input type="button" class="button gray" value="[|]"> -->
-            <button class="gray" id="menu-button" onclick='location.href="./pages.html"'></button>
-            <p class="text direct ellipsis">~/Todo List Page 2/</p>
+            <button class="gray" id="menu-button" onclick='location.href="./index.html"'></button>
+            <p class="text direct ellipsis">~/</p>
             <button id="switch-button" class="gray" onclick="lightMode()">[o | -]</button>
         </nav>
         <!-- END NAVBAR -->
